# module-summaries

./: .gitignore  README.md
Semester4-DB2/: Datenbankabfragen.tex  Einfuehrung.tex  db2-summary.run.xml  db2-summary.tex
Semester4-GDV/: Bildverarbeitung.tex  Koordinatensysteme.tex  MathematischeGrundlagen.tex  Visualisierungstechniken.tex  gdv-summary.run.xml  gdv-summary.tex
Semester4-VS/docs/: .gitignore  Konsistenzmodelle.tex  Middleware.tex  Overview.tex  Replikation.tex  VerteilteDateisysteme.tex  VerteilteSystemeSummary.tex  Zeiten.tex
Semester4-VS/src/: .gitignore
Semester4-VS/src/RPC_Thrift/: CMakeLists.txt  Makefile  client-main.cpp  server-main.cpp
Semester4-VS/src/RPC_Thrift/docs/: compile-thrift.txt  install-thrift-compiler.txt
Semester4-VS/src/RPC_Thrift/gen-cpp/: Example.cpp  example_constants.cpp  example_constants.h  example_types.cpp
Semester5-ASP/: contents.tex  main.tex
Semester5-IAI/: contents.tex  main.tex
Semester5-ML/: README.md  contents.tex  main.tex
TUD/Anwendungsprotokolle_im_Internet/: hdathesis-config.tex  thesis.tex
TUD/IntroKrypto/: classicthesis-config.tex  hdathesis-config.tex  thesis.tex
TUD/TK1_Distributed_Systems_and_Algorithms/: classicthesis-config.tex  feeback.txt  hdathesis-config.tex  thesis.tex
TUD/Verification_of_parallel_programs/: hdathesis-config.tex  thesis.tex
h_da/Semester4-DB2/: JPA.tex  PerformanceOptimizationDBMS.tex  PerformanceOptimizationOR_Mapping.tex
h_da/Semester4-GDV/: AbbildenGraphischerObjekte.tex  DigitaleBilder.tex  GraphischeProgrammierung.tex
h_da/Semester4-VS/: README.md
(+43 files in other folders)
